syntax = "proto3";

option csharp_namespace = "TDiary.Grpc.Protos";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

service EventProto {
  rpc AddEvent (AddEventRequest) returns (AddEventReply);
  rpc GetEvents (GetEventsRequest) returns (GetEventsReply);
}

message AddEventRequest {
  EventData event_data = 1;
}

message AddEventReply {
  oneof result {
    ErrorInfo error_info = 1;
	ResultCode result_code = 2;
  }
}

message GetEventsRequest {
  google.protobuf.Timestamp last_event_date_utc = 1;
}

message GetEventsReply {
  oneof result {
    ErrorInfo error_info = 1;
    ResultCode result_code = 2;
  }
  repeated EventData event_data = 3;
}

message ErrorInfo {
  string reason = 1;
  ErrorType errorType = 2;
}



message EventData {
  string id = 1;
  string entity = 2;
  EventType event_type = 3;
  int32 version = 5;
  string data = 6;
  AuditData audit_data = 7;
}

message AuditData {
  google.protobuf.Timestamp created_at = 1;
  google.protobuf.Timestamp created_at_utc = 2;
  google.protobuf.Timestamp modified_at = 3;
  google.protobuf.Timestamp modified_at_utc = 4;
  string time_zone = 5;
}
enum EventType {
  UNKNOWN = 0;
  INSERT = 1;
  UPDATE = 2;
  DELETE = 3;
  SUMMARY = 4;
}

enum ErrorType {
  VALIDATION = 0;
  INTERNAL = 1;
  BAD_REQUEST = 2;
}

enum ResultCode {
  UNKNOWN_RESULT = 0;
  OK = 1;
  NO_DATA = 2;
}
